--- a/offer-core/pom.xml
+++ b/offer-core/pom.xml
@@ -9,6 +9,8 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <packaging>jar</packaging>
+
     <artifactId>offer-core</artifactId>
 
     <name>Offer Core</name>
@@ -17,14 +19,13 @@
     <dependencies>
 
         <dependency>
-            <groupId>br.com.offer</groupId>
-            <artifactId>offer-common</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
         <dependency>
@@ -59,11 +60,11 @@
             <artifactId>spring-cloud-starter-aws-messaging</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>io.github.boostchicken</groupId>-->
-<!--            <artifactId>spring-data-dynamodb</artifactId>-->
-<!--            <version>5.2.5</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>io.github.boostchicken</groupId>
+            <artifactId>spring-data-dynamodb</artifactId>
+            <version>5.2.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -113,10 +114,12 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.3</version>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+                <version>1.6.21</version>
                 <configuration>
                     <args>
                         <arg>-Xjsr305=strict</arg>
