--- a/offer-core/src/main/resources/application.yml
+++ b/offer-core/src/main/resources/application.yml
@@ -1,16 +1,19 @@
+server:
+  port: 80
 cloud:
   aws:
     region:
-      static: ${AWS_REGION}
+      static: ${AWS_REGION:us-east-1}
       auto: false
     stack:
       auto: false
     credentials:
-      access-key: ${AWS_ACCESS_KEY}
-      secret-key: ${AWS_SECRET_KEY}
+      access-key: ${AWS_ACCESS_KEY:empty}
+      secret-key: ${AWS_SECRET_KEY:empty}
     sqs:
-      endpoint: ${AWS_SQS_ENDPOINT}
+      endpoint: ${AWS_SQS_ENDPOINT:empty}
 sns:
   topics:
-    events-offer: ${AWS_SNS_EVENTS_OFFER_TOPIC}
-
+    events-offer: ${AWS_SNS_EVENTS_OFFER_TOPIC:empty}
+springdoc:
+  default-produces-media-type: application/json
