--- a/offer-core/src/main/resources/application.yml
+++ b/offer-core/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 server:
   port: 80
+spring:
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: https://cognito-idp.us-east-1.amazonaws.com/us-east-1_JIbr3G8CW
 cloud:
   aws:
     region:
